[tool.poetry]
name = "belbins"
version = "0.1.0"
description = ""
authors = ["Jun1Sen <slavkanik2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
environs = "^11.0.0"
aiogram-dialog = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
